--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="about-move">
               <div class="services-details">
                 <a href="">
-                  <img class="img_tec" src="img/techniques/3.jpg" alt="">
+                  <img class="img_tec" src="img/techniques/3.JPG" alt="">
                 </a>
               </div>
               <div class="team-content text-center">
