--- a/carola.html
+++ b/carola.html
@@ -140,23 +140,15 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <h6 class="title">Post-Doctoral positions</h6>
-          <p>
-            <b>2013-2016</b> FONDECYT Regular n° 11304754, Universidad Adolfo Ibáñez ; Pontificia Universidad Catolica de Valparaiso<br>
-            <b>2013</b> Project VRIEA Postdoctorado, Pontificia Universidad Católica de Valparaíso. <br>
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
           <h6 class="title">Projects</h6>
           <p>
-            2018-present Assistant researcher project LEEM-PUC- <b>Minera Escondida BHP.</b><br>
-
-            2017-present Assistant researcher project FONDECYT Regular nº 1160604, Pontificia Universidad Católica de Chile, <b>"Corrosion of Ti-6Al-4V Alloy used for Biomedical Applications”</b><br>
-
-            2016- 2018 Assistant researcher project INNOVACORFO 13BPC3-19083, Pontificia Universidad Católica de Valparaíso, <b>“Protocolo para la selección de esquemas de pinturas empleadas en la protección contra la corrosión atmosférica del acero”</b>.<br>
-          </p>
+            <b>2017- present</b> Research in  LEEM, FONDECYT 1160604, Corrosion of Ti-6Al-4V Alloy used     for Biomedical Applications IR: Mamie Sancy. <br>
+            <b>2016- 2018</b> Post-doc in Corrosion Lab, INNOVACORFO 13BPC3-19083, “Protocolo para la selección de esquemas de pinturas empleadas en la protección contra la corrosión atmosférica del acero” IR: Rosa Vera, Pontificia Universidad Católica de Valparaíso.<br>
+            <b>2013- 2016</b> Post-doc in Powder Metallurgy Lab, FONDECYT 3140207, Study of the mechanical and electrical properties of a metallic glass Cu-Ni-Zr obtained by mechanical alloying. IR: Carola Martínez, Universidad Adolfo Ibáñez. <br> 
+            <b>2013-2016</b> Post-doc in Materials Lab, FONDECYT 11304754, A study on the microstructural changes and properties of a Cu-Ni-Zr bulk metallic glass during the mechanical alloying, by means of analyzing its component systems Cu, Cu-Ni, Cu-Zr and Cu-Ni-Zr under the same milling conditions. IR: Paula Rojas, Pontificia Universidad Católica de Valparaíso <br>
+            <b>2011-2012</b> Thesis PhD Student Project FONDECYT 1111072, Study of the hydriding/dehydriding behaviour of nanostructured composite Mg2Ni(1-x)Mx (M=Co, Fe, Cu) + amorphous Mg50Ni50 produced by milling, IR: Stella Ordoñez, Universidad de Santiago de Chile<br>
+            <b>2007</b> Research Assistant Project FONDECYT 1060050, Formación y estabilidad de películas hibridas orgánicas/inorgánicas en la protección de aleaciones de aluminio y acero inoxidable IR: Maritza Páez <br>
+            </p>
           </div>
         </div>
         <div class="row">
