--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
               </div>
               <div class="team-content text-center">
                 <h4>Gravimetric measurements</h4>
-                <p>Determination of corrositivy in solids, with ASTM standar</p>
+                <p>Determination of corrositivy in solids, with ASTM standar (ASTM G1, G16, G34, G46, G66, G67, G85)</p>
               </div>
             </div>
           </div>
@@ -250,8 +250,8 @@
                 <img class="img_tec"src="img/techniques/2.jpg" alt="">
               </div>
               <div class="team-content text-center">
-                <h4>pH in solids</h4>
-                <p>ASTM standars</p>
+                <h4>Corrosion in solids</h4>
+                <p>ASTM standars (ASTM G51, G162) </p>
               </div>
             </div>
           </div>
@@ -265,7 +265,7 @@
               </div>
               <div class="team-content text-center">
                 <h4>Electrochemical measurements</h4>
-                <p>ASTM standars</p>
+                <p>ASTM standars (ASTM G3, G5, G15, G59,G71, G102)</p>
               </div>
             </div>
           </div>
@@ -323,7 +323,7 @@
               </div>
               <div class="team-content text-center">
                 <h4>Carola Martinez</h4>
-                <p>Academic and independent researcher</p>
+                <p>Academic and Assistant Researcher</p>
               </div>
             </div>
           </div>
