--- a/carola.html
+++ b/carola.html
@@ -162,7 +162,7 @@
               <b>Carola Martínez</b>, C. Aguilar, F. Briones, D. Guzmán, E. Zelaya, L. Troncoso, P. A. Rojas, <a href="https://www.sciencedirect.com/science/article/pii/S0925838818315822">“Effect of Zr on amorphization of Cu-Ni-Zr alloys prepared by mechanical alloying”</a>, Journal of Alloys and Compounds 765 (2018) 771-781. <br>
 
               C. Guerra, M.Sancy, M. Walczak, D. Silva,<b> Carola Martínez</b>, B. Tribollet and C. Aguilar, <a href="https://www.sciencedirect.com/science/article/pii/S0013468618310144">“Evolution of oxide film on the internal porosity of Ti-30Nb-13Ta-2Mn alloy foam” </a>Electrochimica Acta 283 (2018) 676-682. <br>
-              <b>Carola Martinez</b>, F. Briones, M. Villarroel, R. Vera,<a href="https://www.ncbi.nlm.nih.gov/pubmed/29641490"> “Effect of Atmospheric Corrosion on the Mechanical Properties of SAE 1020 Structural Steel”</b>. Materials 11 (4) (2018) 591-607. <br>
+              <b>Carola Martinez</b>, F. Briones, M. Villarroel, R. Vera,<a href="https://www.ncbi.nlm.nih.gov/pubmed/29641490"> “Effect of Atmospheric Corrosion on the Mechanical Properties of SAE 1020 Structural Steel”</a>. Materials 11 (4) (2018) 591-607. <br>
 
               <b>Carola Martínez</b>, F. Briones, P. Rojas, C. Aguilar, D. Guzmán, S. Ordoñez, <a href="https://www.sciencedirect.com/science/article/pii/S0167577X1731282X">“Microstructural and Mechanical Characterization of Copper, Nickel, and Cu-Based Alloys Obtained by Mechanical Alloying and Hot Pressing”</a>,  Materials Letters 209 (2017) 509–512. <br>
 
