--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                       <li><a href="carolina.html">Carolina Guerra</a></li>
                       <li><a href="carlos.html">Carlos Sepulveda</a></li>
                       <li><a href="mariela.html">Mariela Cubillos</a></li>
-                      <li><a href="javiera.html">Javiera Meneses</a></li>
+                      <li><a href="lisa.html">Lisa Muñoz</a></li>
                     </ul> 
                   </li>
                   <li>
@@ -110,8 +110,8 @@
   <div id="home" class="slider-area">
     <div class="bend niceties preview-2">
       <div id="ensign-nivoslider" class="slides">
-        <img src="img/slider/slider1.jpeg" alt="" title="#slider-direction-1" />
-        <img src="img/slider/slider2.jpeg" alt="" title="#slider-direction-2" />
+        <img src="img/slider/slider1.jpg" alt="" title="#slider-direction-1" />
+        <img src="img/slider/slider2.jpg" alt="" title="#slider-direction-2" />
       </div>
 
       <!-- direction 1 -->
@@ -411,8 +411,8 @@
                 </div>
               </div>
               <div class="team-content text-center">
-                <h4>Javiera Meneses</h4>
-                <p>Student Metallurgical Civil Engineer</p>
+                <h4>Lisa Muñoz </h4>
+                <p>Academic and Assistant Researcher</p>
               </div>
             </div>
           </div>
@@ -441,7 +441,7 @@
               <div class="single-icon">
                 <i class="fa fa-mobile"></i>
                 <p>
-                  Call: +1 5589 55488 55<br>
+                  Call: +56 (2) 2354 7084 - 7908<br>
                   <span>Monday-Friday (9am-5pm)</span>
                 </p>
               </div>
@@ -453,8 +453,8 @@
               <div class="single-icon">
                 <i class="fa fa-envelope-o"></i>
                 <p>
-                  Email: info@example.com<br>
-                  <span>Web: www.example.com</span>
+                  Email: info@sancylab.com<br>
+                  <span>Web: www.sancylab.com</span>
                 </p>
               </div>
             </div>
@@ -511,24 +511,36 @@
     <div class="footer-area">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                  <h6>Laboratorio de Electroquimica de Materiales</h6>
+                  <h6><b>Laboratorio de Electroquimica de Materiales</b></h6>
                 </div>
                 <p>Research laboratory, which studies the problem of corrosion in materials
                 </p>
               </div>
             </div>
           <!-- end single footer -->
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h6>information</h6>
+                <h6><b>information</b></h6>
                 <div class="footer-contacts">
-                  <p><span>Tel:</span> +123 456 789</p>
-                  <p><span>Email:</span> contact@example.com</p>
-                  <p><span>Working Hours:</span> 9am-5pm</p>
+                  <p><span>Tel:</span> +56 (2) 2354 7084-7908</p>
+                  <p><span>Email:</span> info@sancylab</p>
+                  <p><span>Working Hours:</span> 9am - 5pm</p>
+                </div>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="footer-content">
+              <div class="footer-head">
+                <h6><b>Investigadores Asociados</b></h6>
+                <div class="footer-contacts">
+                  <p><a href="https://www.uc.cl/"><span>Pontificia Universidad Catolica de Chile</span></a></p>
+                  <p><a href="http://decon.uc.cl/"><span>DECON UC</span></a></p>
+                  <p><a href="https://azocargrouplab.org/"><span>Laboratorio Ignacio Azocar</span></a></p>
                 </div>
               </div>
             </div>
@@ -539,7 +551,7 @@
     <div class="footer-area-bottom">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="col-md2 col-sm-12 col-xs-12">
             <div class="copyright text-center">
               <p>
                 &copy; Copyright <strong>LEM </strong>. All Rights Reserved
