--- a/lisa.html
+++ b/lisa.html
@@ -60,8 +60,7 @@
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
-									</button>
-                <!-- Brand -->
+								</button>
                 <ul class="navbar-brand page-scroll sticky-logo" href="index.html">
                     <li class="active">
                       <img class="logo_uc" src="img/logo_uc.png">
@@ -69,7 +68,7 @@
                     <li class="titulo">
                       <a class="titulo_page titulo_lem">Laboratorio de Electroquimica de Materiales <br> LEM</a>
                     </li>
-                  </ul>
+                </ul>
               </div>
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse main-menu bs-example-navbar-collapse-1" id="navbar-example">
@@ -109,22 +108,24 @@
   <!-- header end -->
 
   <!-- Start Bottom Header -->
-  <div id="curriculum_mariela" class="curriculum header-bg page-area">
+  <div id="curriculum_lisa" class="curriculum header-bg page-area">
     <div class="container contenedor">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
-          <img class="foto-curri rounded mx-auto d-block" src="img/team/mariela.jpg" alt="">
-          <h5 class="title-nombre">Mariela Cubillos</h5>
+          <img class="foto-curri rounded mx-auto d-block" src="img/team/javiera.jpg" alt="">
+          <h5 class="title-nombre">Lisa Muñoz</h5>
           <h6>
-            Contact: <a href="">macubis@gmail.com</a><br>
-          </6>      
+            Contact: <a href="">lisa.moena@gmail.com</a></a> <br>
+          </h6>      
         </div>
       </div>
-      <div class="row">
+       <div class="row">
         <div class="col-lg-12">
           <h6 class="title">Work Experience</h6>
-          <p><b>2016</b> Realization of thesis by Professor Mamie Sancy "Electrochemical behavior of porous foams Ti-6Al-4V". Providing support in Escondida project work, measuring pH and sanding samples.<br>
-          <b>2009-2017</b> I worked in the area of ​​equipment, managing the atomic absorption equipment, and I did quality control in the copper cathode laboratory, performing analysis under BS7317 and handling LECO equipment, sulfur for copper cathodes.
+          <p>
+            <b>2019-2020</b> Assistent researcher, "Ladrillos ensamblables en base a plastico reciclado para contruccion de viviendas", Proyecto CORFO.<br>
+            <b>2019-present</b> Assistent researcher,"Modificacion superficial de aleaciones de Magnesio para aplicaciones como biomaterial", Universidad de Santiago de Chile <br>
+            <b>2016-present </b> Adjunct professor, Quimica General,  Departamento de Materiales, Universidad Santiago de Chile<br>     
           </p>
         </div>
       </div>
@@ -132,10 +133,36 @@
         <div class="col-lg-12">
           <h6 class="title">Education</h6>
           <p>
-            <b>1999 - 2005</b> Industrial Chemist, Universidad Tecnologica Metropolitana, Santiago 
+            <b>2014</b> Doctor en Quimica, Universidad de Santiago de Chile <br>
+            <b>2009</b> Quimico, Universidad de Santiago de Chile<br>
+            <b>2008</b> Licenciatura en Quimica, Universidad de Santiago de Chile<br>
           </p>
         </div>
-      </div>
+      </div> 
+      <div class="row">
+        <div class="col-lg-12">
+          <h6 class="title">Projects</h6>
+          <p>
+            <b>2018- Present </b> Post-doc interno Dicty,"Modificacion superficial de aleaciones Magnesio para aplicacion como biomaterial" IR: Martiza Páez, Universidad de Santiago de Chile.<br>
+            <b>2016- 2018</b> Post-doc in Proyecto Anillo 10804,"Superficies funcionalizadas: proteccion contra la corrosion y biocorrosion" IR: Maritza Páez, Universidad de Santiago de Chile.<br>
+            <b>2015</b> Investigadora Asociado, Proyecto Fondef D10i1100, "Smart sensors for the wine industry."
+          </p> 
+        </div>
+      </div> 
+      <div class="row">
+          <div class="col-lg-12">
+            <h6 class="title">Recent publications</h6>
+            <p>
+              M. Gulppi,<b> Lisa Muñoz</b>, N. Vejar, J. M. Blamey, E.Gonzalez, M. Azócar, M. Sancy, P. Molina, J. H. Zagal, M. Paez. <a href="https://www.sciencedirect.com/science/article/pii/S0013468619304839?via%3Dihub">"Electrochemical dynamic sensing of hydrogen peroxide in the presence of microorganisms"</a>, Electrochimica Acta, 2019, 305, 416-422.<br>
+              D. Ortega, C. Alvarado,<b> Lisa Muñoz</b>, H. Kohler, F. Pineda, M. Páez, M. Sancy, N. Vejar, J M. Blamey. <a href="http://www.electrochemsci.org/papers/vol14/140201940.pdf">"Effect of a bacterial consortium on passivation property"</a>. Int. J. Electrochem. Sci., 14, 2019, 1940–1953.<br> 
+              <b>Lisa Muñoz</b>, F. Pineda, C. Martínez, M. Sancy, M. Urzua, M. Flores, M. Páez. <a href="https://www.sciencedirect.com/science/article/pii/S0257897218312611">"Improving the interaction between aluminum surfaces and polymer coatings"</a>, Surf. Coat. Technol. 2019, 358, 435-442<br>
+              <b>Lisa Muñoz</b>, L. Tamayo, M. Gulppi, F. Rabagliati, M. Flores, M. Urzúa, M Azócar, J. Zagal, M. Encinas, X. Zhou, G. Thompson and M. Páez. <a href="https://www.mdpi.com/1420-3049/23/11/2747">"Surface Functionalization of an Aluminum Alloy to Generate an Antibiofilm Coating Based on Poly (Methyl Methacrylate) and Silver Nanoparticles"<7a>. Molecules, 2018, 23, 2747.<br>
+              F. Rabagliati, M. Cuevas, M. Pérez, F. Rodríguez, R. Cancino, G. Mardones, H. Muñoz, M. Saavedra, M. Vidal, <b>L. Muñoz</b>, D. Canales, D. Yañez, P. Zamora, P. Zapata. <a href="https://scielo.conicyt.cl/scielo.php?pid=S0717-97072016000400030&script=sci_arttext&tlng=e"> "Homo- and copolymerization of styrene and styrene related monomers. synthesis and characterization" </a>. J. Chil. Chem. Soc. 2016, 61, 4.<br>
+              C. Silval, M. Santander-Nelli, C. Vera-Oyarce, J. Silva, A. Gómez,<b> Lisa Muñoz</b>, J. Zagal, M. Gulppi, J. Pavez. <a href="">"Polyaniline nanostructure electrode: morphological control by a hybrid template"</a>. J Solid State Electrochem, 2016, 20, 1175–1180.<br>
+              L. Tamayo, P. Zapata, F. Rabagliati, M. Azocar, <b>Lisa Muñoz</b>, X. Zhou, G. Thomposon, M. Paez. <a href="">"Antibacterial and noncytotoxic effect of nanocomposites based in polyethylene and coper nanoparticles"</a>. Journal of Materials science: in medicine. 2015, 26, 129.<br>
+             </p>
+          </div>
+        </div> 
     </div>
   </div>
   <!-- END Header -->
@@ -165,14 +192,14 @@
               <div class="footer-head">
                 <h6>Laboratorio de Electroquimica de Materiales</h6>
               </div>
-              <p>Research laboratory, which studies the problem of corrosion in materials </p>
+                <p>Research laboratory, which studies the problem of corrosion in materials.</p>
             </div>
           </div>
           <!-- end single footer -->
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
+                <h6>information</h6>
                 <div class="footer-contacts">
                   <p><span>Tel:</span> +56 (2) 2354 7084-7908</p>
                   <p><span>Email:</span> info@sancylab</p>
@@ -212,7 +239,7 @@
                 Licensing information: https://bootstrapmade.com/license/
                 Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=eBusiness
               -->
-              Designed by <a>Macubis</a>
+              Designed by <a href="">Macubis</a>
             </div>
           </div>
         </div>
