--- a/carola.html
+++ b/carola.html
@@ -92,7 +92,7 @@
                     <a class="page-scroll" href="mariela.html">Mariela C.</a>
                   </li>
                   <li>
-                    <a class="page-scroll" href="javiera.html">Javiera M.</a>
+                    <a class="page-scroll" href="lisa.html">Lisa M.</a>
                   </li>
                 </ul>
               </div>
@@ -212,23 +212,35 @@
     <div class="footer-area">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                  <h6>Laboratorio de Electroquimica de Materiales</h6>
+                  <h6><b>Laboratorio de Electroquimica de Materiales</b></h6>
               </div>
                 <p>Research laboratory, which studies the problem of corrosion in materials</p>
             </div>
           </div>
           <!-- end single footer -->
-          <div class="col-md-6 col-sm-6 col-xs-12">
+          <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h6>information</h6>
+                <h6><b>information</b></h6>
                 <div class="footer-contacts">
                   <p><span>Tel:</span> +123 456 789</p>
                   <p><span>Email:</span> contact@example.com</p>
                   <p><span>Working Hours:</span> 9am-5pm</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="footer-content">
+              <div class="footer-head">
+                <h6><b>Investigadores Asociados</b></h6>
+                <div class="footer-contacts">
+                  <p><a href="https://www.uc.cl/"><span>Pontificia Universidad Catolica de Chile</span></a></p>
+                  <p><a href="http://decon.uc.cl/"><span>DECON UC</span></a></p>
+                  <p><a href="https://azocargrouplab.org/"><span>Laboratorio Ignacio Azocar</span></a></p>
                 </div>
               </div>
             </div>
