--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <a class="ready-btn right-btn page-scroll" href="#about">Research</a>
+                  <a class="ready-btn page-scroll" href="#about">Research</a>
                   <a class="ready-btn page-scroll" href="#services">Techniques</a>
                 </div>
               </div>
@@ -154,7 +154,7 @@
                 </div>
                 <!-- layer 3 -->
                 <div class="layer-1-3 hidden-xs wow slideInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                  <a class="ready-btn right-btn page-scroll" href="#about">Research</a>
+                  <a class="ready-btn page-scroll" href="#about">Research</a>
                   <a class="ready-btn page-scroll" href="#services">Techniques</a>
                 </div>
               </div>
