--- a/lisa.html
+++ b/lisa.html
@@ -112,7 +112,7 @@
     <div class="container contenedor">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
-          <img class="foto-curri rounded mx-auto d-block" src="img/team/javiera.jpg" alt="">
+          <img class="foto-curri rounded mx-auto d-block" src="img/team/lisa_mini.jpeg" alt="">
           <h5 class="title-nombre">Lisa Muñoz</h5>
           <h6>
             Contact: <a href="">lisa.moena@gmail.com</a></a> <br>
@@ -133,9 +133,8 @@
         <div class="col-lg-12">
           <h6 class="title">Education</h6>
           <p>
-            <b>2014</b> Doctor en Quimica, Universidad de Santiago de Chile <br>
-            <b>2009</b> Quimico, Universidad de Santiago de Chile<br>
-            <b>2008</b> Licenciatura en Quimica, Universidad de Santiago de Chile<br>
+            <b>2014</b> PhD in Chemistry, Universidad de Santiago de Chile <br>
+            <b>2009</b> Undergraduate in Chemistry, Universidad de Santiago de Chile<br>
           </p>
         </div>
       </div> 
@@ -211,7 +210,7 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h6><b>Investigadores Asociados</b></h6>
+                <h6><b>associated researchers</b></h6>
                 <div class="footer-contacts">
                   <p><a href="https://www.uc.cl/"><span>Pontificia Universidad Catolica de Chile</span></a></p>
                   <p><a href="http://decon.uc.cl/"><span>DECON UC</span></a></p>
