--- a/mamie.html
+++ b/mamie.html
@@ -244,7 +244,7 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h6><b>Investigadores Asociados</b></h6>
+                <h6><b>associated researchers</b></h6>
                 <div class="footer-contacts">
                   <p><a href="https://www.uc.cl/"><span>Pontificia Universidad Catolica de Chile</span></a></p>
                   <p><a href="http://decon.uc.cl/"><span>DECON UC</span></a></p>
