--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="single-team-member">
               <div class="team-img">
                 <a href="">
-                  <img class="img_team" src="img/team/javiera.jpg" alt="">
+                  <img class="img_team" src="img/team/lisa.jpeg" alt="">
                 </a>
                 <div class="team-social-icon text-center">
                   <ul>
@@ -536,13 +536,13 @@
            <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h6><b>Investigadores Asociados</b></h6>
+                <h6><b>associated researchers</b></h6>
                 <div class="footer-contacts">
                   <p><a href="https://www.uc.cl/"><span>Pontificia Universidad Catolica de Chile</span></a></p>
                   <p><a href="http://decon.uc.cl/"><span>DECON UC</span></a></p>
                   <p><a href="https://azocargrouplab.org/"><span>Laboratorio Ignacio Azocar</span></a></p>
                 </div>
-              </div>
+
             </div>
           </div>
         </div>
